load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["sim.go"],
    importpath = "github.com/flarebuild/ristretto/sim",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["sim_test.go"],
    embed = [":go_default_library"],
)
